task-3/gen/JavaClassParser.java
// Generated from C:/Users/Flexatroid/Desktop/MT/Lab3/src\JavaClass.g4 by ANTLR 4.9.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JavaClassParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PUBLIC=1, PRIVATE=2, PROTECTED=3, CLASS=4, SUPER=5, EXTENDS=6, IMPLEMENTS=7, 
		STATIC=8, FINAL=9, ABSTRACT=10, NEW=11, L_BRACE=12, R_BRACE=13, L_PARAN=14, 
		R_PARAN=15, L_BRACK=16, R_BRACK=17, COMMA=18, SEMICOLON=19, DOT=20, IF=21, 
		ELSE=22, FOR=23, DO=24, WHILE=25, BREAK=26, CONTINUE=27, RETURN=28, TRUE=29, 
		FALSE=30, PRIMITIVE=31, LITERAL=32, IDENTIFIER=33, ASSIGN=34, ASSIGN_ADD=35, 
		ASSIGN_SUB=36, ASSIGN_MUL=37, ASSIGN_DIV=38, UNARY_OP=39, BINARY_OP=40, 
		WS=41;
	public static final int
		RULE_javaClass = 0, RULE_classImpls = 1, RULE_classBody = 2, RULE_field = 3, 
		RULE_constructor = 4, RULE_method = 5, RULE_methodBody = 6, RULE_codeBlock = 7, 
		RULE_constructorBody = 8, RULE_argument = 9, RULE_arguments = 10, RULE_methodParams = 11, 
		RULE_methodCall = 12, RULE_arrayAccess = 13, RULE_assignmentValue = 14, 
		RULE_assignment = 15, RULE_ifElseStatement = 16, RULE_whileLoop = 17, 
		RULE_forLoop = 18, RULE_doWhileLoop = 19, RULE_statement = 20, RULE_jumpStatement = 21, 
		RULE_expression = 22, RULE_bool = 23, RULE_type = 24, RULE_accessModifier = 25, 
		RULE_nonAccessModifiers = 26, RULE_assignmentOp = 27;
	private static String[] makeRuleNames() {
		return new String[] {
			"javaClass", "classImpls", "classBody", "field", "constructor", "method", 
			"methodBody", "codeBlock", "constructorBody", "argument", "arguments", 
			"methodParams", "methodCall", "arrayAccess", "assignmentValue", "assignment", 
			"ifElseStatement", "whileLoop", "forLoop", "doWhileLoop", "statement", 
			"jumpStatement", "expression", "bool", "type", "accessModifier", "nonAccessModifiers", 
			"assignmentOp"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'public'", "'private'", "'protected'", "'class'", "'super'", "'extends'", 
			"'implements'", "'static'", "'final'", "'abstract'", "'new'", "'{'", 
			"'}'", "'('", "')'", "'['", "']'", "','", "';'", "'.'", "'if'", "'else'", 
			"'for'", "'do'", "'while'", "'break'", "'continue'", "'return'", "'true'", 
			"'false'", null, null, null, "'='", "'+='", "'-='", "'*='", "'/='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PUBLIC", "PRIVATE", "PROTECTED", "CLASS", "SUPER", "EXTENDS", 
			"IMPLEMENTS", "STATIC", "FINAL", "ABSTRACT", "NEW", "L_BRACE", "R_BRACE", 
			"L_PARAN", "R_PARAN", "L_BRACK", "R_BRACK", "COMMA", "SEMICOLON", "DOT", 
			"IF", "ELSE", "FOR", "DO", "WHILE", "BREAK", "CONTINUE", "RETURN", "TRUE", 
			"FALSE", "PRIMITIVE", "LITERAL", "IDENTIFIER", "ASSIGN", "ASSIGN_ADD", 
			"ASSIGN_SUB", "ASSIGN_MUL", "ASSIGN_DIV", "UNARY_OP", "BINARY_OP", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JavaClass.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JavaClassParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class JavaClassContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(JavaClassParser.CLASS, 0); }
		public TerminalNode IDENTIFIER() { return getToken(JavaClassParser.IDENTIFIER, 0); }
		public TerminalNode L_BRACE() { return getToken(JavaClassParser.L_BRACE, 0); }
		public ClassBodyContext classBody() {
			return getRuleContext(ClassBodyContext.class,0);
		}
		public TerminalNode R_BRACE() { return getToken(JavaClassParser.R_BRACE, 0); }
		public AccessModifierContext accessModifier() {
			return getRuleContext(AccessModifierContext.class,0);
		}
		public NonAccessModifiersContext nonAccessModifiers() {
			return getRuleContext(NonAccessModifiersContext.class,0);
		}
		public TerminalNode EXTENDS() { return getToken(JavaClassParser.EXTENDS, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IMPLEMENTS() { return getToken(JavaClassParser.IMPLEMENTS, 0); }
		public ClassImplsContext classImpls() {
			return getRuleContext(ClassImplsContext.class,0);
		}
		public JavaClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_javaClass; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaClassListener ) ((JavaClassListener)listener).enterJavaClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaClassListener ) ((JavaClassListener)listener).exitJavaClass(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaClassVisitor ) return ((JavaClassVisitor<? extends T>)visitor).visitJavaClass(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JavaClassContext javaClass() throws RecognitionException {
		JavaClassContext _localctx = new JavaClassContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_javaClass);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PUBLIC) | (1L << PRIVATE) | (1L << PROTECTED))) != 0)) {
				{
				setState(56);
				accessModifier();
				}
			}

			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STATIC) | (1L << FINAL) | (1L << ABSTRACT))) != 0)) {
				{
				setState(59);
				nonAccessModifiers();
				}
			}

			setState(62);
			match(CLASS);
			setState(63);
			match(IDENTIFIER);
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(64);
				match(EXTENDS);
				setState(65);
				type();
				}
			}

			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IMPLEMENTS) {
				{
				setState(68);
				match(IMPLEMENTS);
				setState(69);
				classImpls();
				}
			}

			setState(72);
			match(L_BRACE);
			setState(73);
			classBody();
			setState(74);
			match(R_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassImplsContext extends ParserRuleContext {
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(JavaClassParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(JavaClassParser.COMMA, i);
		}
		public ClassImplsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classImpls; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaClassListener ) ((JavaClassListener)listener).enterClassImpls(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaClassListener ) ((JavaClassListener)listener).exitClassImpls(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaClassVisitor ) return ((JavaClassVisitor<? extends T>)visitor).visitClassImpls(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassImplsContext classImpls() throws RecognitionException {
		ClassImplsContext _localctx = new ClassImplsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classImpls);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			type();
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(77);
				match(COMMA);
				setState(78);
				type();
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassBodyContext extends ParserRuleContext {
		public List<FieldContext> field() {
			return getRuleContexts(FieldContext.class);
		}
		public FieldContext field(int i) {
			return getRuleContext(FieldContext.class,i);
		}
		public List<ConstructorContext> constructor() {
			return getRuleContexts(ConstructorContext.class);
		}
		public ConstructorContext constructor(int i) {
			return getRuleContext(ConstructorContext.class,i);
		}
		public List<MethodContext> method() {
			return getRuleContexts(MethodContext.class);
		}
		public MethodContext method(int i) {
			return getRuleContext(MethodContext.class,i);
		}
		public ClassBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaClassListener ) ((JavaClassListener)listener).enterClassBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaClassListener ) ((JavaClassListener)listener).exitClassBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaClassVisitor ) return ((JavaClassVisitor<? extends T>)visitor).visitClassBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassBodyContext classBody() throws RecognitionException {
		ClassBodyContext _localctx = new ClassBodyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_classBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PUBLIC) | (1L << PRIVATE) | (1L << PROTECTED) | (1L << STATIC) | (1L << FINAL) | (1L << ABSTRACT) | (1L << PRIMITIVE) | (1L << IDENTIFIER))) != 0)) {
				{
				setState(87);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(84);
					field();
					}
					break;
				case 2:
					{
					setState(85);
					constructor();
					}
					break;
				case 3:
					{
					setState(86);
					method();
					}
					break;
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(JavaClassParser.IDENTIFIER, 0); }
		public TerminalNode SEMICOLON() { return getToken(JavaClassParser.SEMICOLON, 0); }
		public AccessModifierContext accessModifier() {
			return getRuleContext(AccessModifierContext.class,0);
		}
		public NonAccessModifiersContext nonAccessModifiers() {
			return getRuleContext(NonAccessModifiersContext.class,0);
		}
		public List<TerminalNode> L_BRACK() { return getTokens(JavaClassParser.L_BRACK); }
		public TerminalNode L_BRACK(int i) {
			return getToken(JavaClassParser.L_BRACK, i);
		}
		public List<TerminalNode> R_BRACK() { return getTokens(JavaClassParser.R_BRACK); }
		public TerminalNode R_BRACK(int i) {
			return getToken(JavaClassParser.R_BRACK, i);
		}
		public AssignmentOpContext assignmentOp() {
			return getRuleContext(AssignmentOpContext.class,0);
		}
		public AssignmentValueContext assignmentValue() {
			return getRuleContext(AssignmentValueContext.class,0);
		}
		public FieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_field; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaClassListener ) ((JavaClassListener)listener).enterField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaClassListener ) ((JavaClassListener)listener).exitField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaClassVisitor ) return ((JavaClassVisitor<? extends T>)visitor).visitField(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldContext field() throws RecognitionException {
		FieldContext _localctx = new FieldContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_field);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PUBLIC) | (1L << PRIVATE) | (1L << PROTECTED))) != 0)) {
				{
				setState(92);
				accessModifier();
				}
			}

			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STATIC) | (1L << FINAL) | (1L << ABSTRACT))) != 0)) {
				{
				setState(95);
				nonAccessModifiers();
				}
			}

			setState(98);
			type();
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==L_BRACK) {
				{
				{
				setState(99);
				match(L_BRACK);
				setState(100);
				match(R_BRACK);
				}
				}
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(106);
			match(IDENTIFIER);
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ASSIGN) | (1L << ASSIGN_ADD) | (1L << ASSIGN_SUB) | (1L << ASSIGN_MUL) | (1L << ASSIGN_DIV))) != 0)) {
				{
				setState(107);
				assignmentOp();
				setState(108);
				assignmentValue();
				}
			}

			setState(112);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstructorContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(JavaClassParser.IDENTIFIER, 0); }
		public TerminalNode L_PARAN() { return getToken(JavaClassParser.L_PARAN, 0); }
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public TerminalNode R_PARAN() { return getToken(JavaClassParser.R_PARAN, 0); }
		public TerminalNode L_BRACE() { return getToken(JavaClassParser.L_BRACE, 0); }
		public ConstructorBodyContext constructorBody() {
			return getRuleContext(ConstructorBodyContext.class,0);
		}
		public TerminalNode R_BRACE() { return getToken(JavaClassParser.R_BRACE, 0); }
		public AccessModifierContext accessModifier() {
			return getRuleContext(AccessModifierContext.class,0);
		}
		public ConstructorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaClassListener ) ((JavaClassListener)listener).enterConstructor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaClassListener ) ((JavaClassListener)listener).exitConstructor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaClassVisitor ) return ((JavaClassVisitor<? extends T>)visitor).visitConstructor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstructorContext constructor() throws RecognitionException {
		ConstructorContext _localctx = new ConstructorContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_constructor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PUBLIC) | (1L << PRIVATE) | (1L << PROTECTED))) != 0)) {
				{
				setState(114);
				accessModifier();
				}
			}

			setState(117);
			match(IDENTIFIER);
			setState(118);
			match(L_PARAN);
			setState(119);
			arguments();
			setState(120);
			match(R_PARAN);
			setState(121);
			match(L_BRACE);
			setState(122);
			constructorBody();
			setState(123);
			match(R_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(JavaClassParser.IDENTIFIER, 0); }
		public TerminalNode L_PARAN() { return getToken(JavaClassParser.L_PARAN, 0); }
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public TerminalNode R_PARAN() { return getToken(JavaClassParser.R_PARAN, 0); }
		public TerminalNode L_BRACE() { return getToken(JavaClassParser.L_BRACE, 0); }
		public MethodBodyContext methodBody() {
			return getRuleContext(MethodBodyContext.class,0);
		}
		public TerminalNode R_BRACE() { return getToken(JavaClassParser.R_BRACE, 0); }
		public AccessModifierContext accessModifier() {
			return getRuleContext(AccessModifierContext.class,0);
		}
		public NonAccessModifiersContext nonAccessModifiers() {
			return getRuleContext(NonAccessModifiersContext.class,0);
		}
		public MethodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaClassListener ) ((JavaClassListener)listener).enterMethod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaClassListener ) ((JavaClassListener)listener).exitMethod(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaClassVisitor ) return ((JavaClassVisitor<? extends T>)visitor).visitMethod(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodContext method() throws RecognitionException {
		MethodContext _localctx = new MethodContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_method);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PUBLIC) | (1L << PRIVATE) | (1L << PROTECTED))) != 0)) {
				{
				setState(125);
				accessModifier();
				}
			}

			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STATIC) | (1L << FINAL) | (1L << ABSTRACT))) != 0)) {
				{
				setState(128);
				nonAccessModifiers();
				}
			}

			setState(131);
			type();
			setState(132);
			match(IDENTIFIER);
			setState(133);
			match(L_PARAN);
			setState(134);
			arguments();
			setState(135);
			match(R_PARAN);
			setState(136);
			match(L_BRACE);
			setState(137);
			methodBody();
			setState(138);
			match(R_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodBodyContext extends ParserRuleContext {
		public List<CodeBlockContext> codeBlock() {
			return getRuleContexts(CodeBlockContext.class);
		}
		public CodeBlockContext codeBlock(int i) {
			return getRuleContext(CodeBlockContext.class,i);
		}
		public MethodBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaClassListener ) ((JavaClassListener)listener).enterMethodBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaClassListener ) ((JavaClassListener)listener).exitMethodBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaClassVisitor ) return ((JavaClassVisitor<? extends T>)visitor).visitMethodBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodBodyContext methodBody() throws RecognitionException {
		MethodBodyContext _localctx = new MethodBodyContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_methodBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FINAL) | (1L << IF) | (1L << FOR) | (1L << DO) | (1L << WHILE) | (1L << BREAK) | (1L << CONTINUE) | (1L << RETURN) | (1L << PRIMITIVE) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(140);
				codeBlock();
				}
				}
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CodeBlockContext extends ParserRuleContext {
		public ForLoopContext forLoop() {
			return getRuleContext(ForLoopContext.class,0);
		}
		public WhileLoopContext whileLoop() {
			return getRuleContext(WhileLoopContext.class,0);
		}
		public DoWhileLoopContext doWhileLoop() {
			return getRuleContext(DoWhileLoopContext.class,0);
		}
		public IfElseStatementContext ifElseStatement() {
			return getRuleContext(IfElseStatementContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public CodeBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_codeBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaClassListener ) ((JavaClassListener)listener).enterCodeBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaClassListener ) ((JavaClassListener)listener).exitCodeBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaClassVisitor ) return ((JavaClassVisitor<? extends T>)visitor).visitCodeBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CodeBlockContext codeBlock() throws RecognitionException {
		CodeBlockContext _localctx = new CodeBlockContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_codeBlock);
		try {
			setState(151);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FOR:
				enterOuterAlt(_localctx, 1);
				{
				setState(146);
				forLoop();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 2);
				{
				setState(147);
				whileLoop();
				}
				break;
			case DO:
				enterOuterAlt(_localctx, 3);
				{
				setState(148);
				doWhileLoop();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 4);
				{
				setState(149);
				ifElseStatement();
				}
				break;
			case FINAL:
			case BREAK:
			case CONTINUE:
			case RETURN:
			case PRIMITIVE:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 5);
				{
				setState(150);
				statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
